--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="I'm Angelu L. Banogbanog, a web developer passionate about creating modern, interactive web experiences using React, TailwindCSS, PHP, and more.">
+    <meta name="keywords" content="Angelu L. Banogbanog, web developer, portfolio, React, TailwindCSS, PHP, JavaScript, IT student">
+    <meta name="author" content="Angelu L. Banogbanog">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my-portfolio</title>
