--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="I'm Angelu L. Banogbanog, a web developer passionate about creating modern, interactive web experiences using React, TailwindCSS, PHP, and more.">
     <meta name="keywords" content="Angelu L. Banogbanog, web developer, portfolio, React, TailwindCSS, PHP, JavaScript, IT student">
     <meta name="author" content="Angelu L. Banogbanog">
+    <meta name="google-site-verification" content="beP4S0PQQ9GunJ1ly5M8z5MnnLaVj9FnexIf9Ya5neA" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my-portfolio</title>
