--- a/my-portfolio/index.html
+++ b/my-portfolio/index.html
@@ -2,29 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- 🔍 SEO Meta Tags -->
-    <meta name="description" content="I'm Angelu L. Banogbanog, a web developer passionate about creating modern, interactive web experiences using React, TailwindCSS, PHP, and more." />
-    <meta name="keywords" content="Angelu L. Banogbanog, web developer, portfolio, React, TailwindCSS, PHP, JavaScript, IT student" />
-    <meta name="author" content="Angelu L. Banogbanog" />
+    <meta name="description" content="I'm Angelu L. Banogbanog, a web developer passionate about creating modern, interactive web experiences using React, TailwindCSS, PHP, and more.">
+    <meta name="keywords" content="Angelu L. Banogbanog, web developer, portfolio, React, TailwindCSS, PHP, JavaScript, IT student">
+    <meta name="author" content="Angelu L. Banogbanog">
     <meta name="google-site-verification" content="beP4S0PQQ9GunJ1ly5M8z5MnnLaVj9FnexIf9Ya5neA" />
-
-    <!-- 🧠 Open Graph (Facebook / LinkedIn preview) -->
-    <meta property="og:title" content="Angelu L. Banogbanog | Web Developer Portfolio" />
-    <meta property="og:description" content="Discover my portfolio — a showcase of modern web design and interactive development using React, TailwindCSS, and PHP." />
-    <meta property="og:image" content="https://angelubanogbanog.github.io/angelu-banogbanog-portfolio/preview.png" />
-    <meta property="og:url" content="https://angelubanogbanog.github.io/angelu-banogbanog-portfolio/" />
-    <meta property="og:type" content="website" />
-
-    <!-- 🐦 Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Angelu L. Banogbanog | Web Developer Portfolio" />
-    <meta name="twitter:description" content="Explore my portfolio showcasing modern and responsive web apps built with React and TailwindCSS." />
-    <meta name="twitter:image" content="https://angelubanogbanog.github.io/angelu-banogbanog-portfolio/preview.png" />
-
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <title>Angelu Banogbanog | Web Developer Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>my-portfolio</title>
   </head>
   <body>
     <div id="root"></div>
